feat: move blog homepage, update frontmatter variables, update link reference names

--- a/docs/blog/_posts/2023-04-03-welcome.md
+++ b/docs/blog/_posts/2023-04-03-welcome.md
@@ -1,7 +1,26 @@
 ---
+# Basic post info
 title: "Welcome"
+subtitle: null
 date: 2023-04-03
-categories: 
+
+# SEO and sharing
+share-title: null
+share-description: null
+share-img: null
+
+# Images
+cover-img: null
+thumbnail-img: null
+
+# Post categories and comments
+categories: non-technical
+comments: true
+
+# Configuring display properties
+readtime: true
+
+# The excerpt is the post body above this separator
 excerpt_separator: <!-- more -->
 ---
 
