--- a/docs/blog/_posts/2023-04-03-welcome.md
+++ b/docs/blog/_posts/2023-04-03-welcome.md
@@ -3,6 +3,7 @@
 title: "Welcome"
 subtitle: null
 date: 2023-04-03
+last-updated: null
 
 # SEO and sharing
 share-title: null
@@ -14,7 +15,7 @@ cover-img: null
 thumbnail-img: null
 
 # Post categories and comments
-categories: non-technical
+tags: [non-technical]
 comments: true
 
 # Configuring display properties
