refactor(blog/posts/welcome): update the available categories

--- a/docs/blog/_posts/2023-04-03-welcome.md
+++ b/docs/blog/_posts/2023-04-03-welcome.md
@@ -15,7 +15,32 @@ cover-img: null
 thumbnail-img: null
 
 # Post categories and comments
-tags: [non-technical]
+tags: [
+    # General categories
+    non-technical,
+    # math,
+    # tech,
+
+    # Non-technical sub-categories
+    # life,
+    # relationships,
+    # for laughs,
+    # anecdotes,
+
+    # Math sub-categories
+    # infinity,
+    # functional programming,
+    # ai,
+
+    # Tech sub-categories
+    # software,
+    # ai,
+    # functional programming,
+    # frontend development,
+    # javascript,
+    # typescript,
+    # projitect,
+]
 comments: true
 
 # Configuring display properties
